--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>io.rsocket.broker</groupId>
     <artifactId>rsocket-broker-spring</artifactId>
-    <version>1.0.0</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>rsocket-broker-spring</name>
     <description>rsocket-broker-spring</description>
     <properties>
